--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = ../inventories/vagrant/hosts
+inventory = inventories/vagrant/hosts
 host_key_checking = False
 remote_user = vagrant
 become=True
